# vibe-3

./: .gitignore
.agent/: Agent.md
.agent/skills/git-commit/: SKILL.md
.codex/skills/code-review/: SKILL.md
.codex/skills/code-review/agents/: openai.yaml
.codex/skills/git-commit/: SKILL.md
.codex/skills/test-author-be/: SKILL.md
.codex/skills/test-author-be/agents/: openai.yaml
.codex/skills/test-author-fe/: SKILL.md
.codex/skills/test-author-fe/agents/: openai.yaml
.github/workflows/: deploy-frontend-pages.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: chatbot.py  excel.py  health.py  news.py
backend/app/core/: database.py
backend/app/schemas/: chatbot.py  excel.py  news.py
backend/app/services/: chatbot_pipeline.py  chatbot_processor.py  chatbot_store.py  excel_processor.py  excel_store.py  excel_workbook.py  news_collector.py  news_scheduler.py  news_store.py
docs/: Architecture.md  Operation.md  PRD.md  generate_project_structure_ppt.py  index.html  project_structure_diagram.pptx
frontend/: .env.example  vite.config.ts
frontend/src/: styles.css
frontend/src/app/: App.tsx
frontend/src/pages/: ChatbotPage.tsx  ExcelPage.tsx  HomePage.tsx  NewsPage.tsx  SchedulePage.tsx
frontend/src/shared/: types.ts
frontend/src/shared/api/: base.ts  chatbot.ts  excel.ts  health.ts  news.ts
