[project]
name = "admin-superapp-backend"
version = "0.1.0"
description = "FastAPI backend for public administration super app"
requires-python = ">=3.14"
dependencies = [
  "apscheduler>=3.11.0",
  "beautifulsoup4>=4.13.4",
  "fastapi>=0.138.2",
  "openpyxl>=3.1.5",
  "pandas>=2.3.0",
  "requests>=2.32.5",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.49.0",
]

[tool.uv]
package = false
