[project]
name = "admin-superapp-backend"
version = "0.1.0"
description = "FastAPI backend for public administration super app"
requires-python = ">=3.14"
dependencies = [
  "apscheduler>=3.11.0",
  "beautifulsoup4>=4.13.4",
  "fastapi>=0.138.2",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-text-splitters>=0.3.0",
  "openpyxl>=3.1.5",
  "openai>=1.55.0",
  "pandas>=2.3.0",
  "pypdf>=5.0.0",
  "python-dotenv>=1.0.1",
  "python-pptx>=1.0.2",
  "requests>=2.32.5",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.49.0",
]

[tool.uv]
package = false
